--- a/act_restaurante_s03/index1.html
+++ b/act_restaurante_s03/index1.html
@@ -60,7 +60,7 @@
 </head>
 <body>
     <!-- 
-      <body>: Contiene TODO el contenido visible de la página.
+      <body>: Contiene TODO el contenido visible de la página y es la estructura de mi documento
     -->
     <header class="header">
         <!--
